tests/parser/good/module.hel
// @name module
// @phase parser
// @expect success

module Test;

import std.io

x: i32 = 1
