tests/parser/bad/bind_missing_rhs.hel
// @name bind_missing_rhs
// @phase parser
// @expect error

x = 1 >>=;
